[build-system]
requires = ["setuptools", "setuptools-scm", "setuptools-git-versioning", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "UBC-Solar-Simulation"
authors = [
    {name = "UBC Solar", email = "software@ubcsolar.com"},
    {name = "Fisher Xue"},
    {name = "Mihir Nimgade"},
    {name = "Chris Chang"},
    {name = "David Widjaja"},
    {name = "Justin Hua"},
    {name = "Ilya Veksler"},
    {name = "Renu Rajamagesh"},
    {name = "Ritchie Xia"},
    {name = "Erik Langille"},
    {name = "Chris Aung"},
    {name = "Nicolas Ric"},
    {name = "Ishaan Trivedi"},
    {name = "Jason Liang"},
    {name = "Felix Toft"},
    {name = "Mack Wilson"},
    {name = "Jonah Lee"},
    {name = "Tamzeed Quazi"},
    {name = "Joshua Riefman"}
]
maintainers = [
    {name = "UBC Solar", email = "software@ubcsolar.com"},
    {name = "Joshua Riefman", email = "joshuariefman@gmail.com"},
    {name = "Renu Rajamagmesh"},
    {name = "Felix Toft"},
    {name = "Mack Wilson"},
    {name = "Jonah Lee"},
    {name = "Tamzeed Quazi"},
]
description = "UBC Solar's Simulation Environment"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["car", "simulation", "solar"]
license = { file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
    "bayesian_optimization==1.4.3",
    "bokeh==2.3.3",
    "matplotlib",
    "numpy",
    "pandas",
    "Pillow==9.4.0",
    "plotly==5.6.0",
    "polyline==1.4.0",
    "pytest==7.1.1",
    "python-dotenv==1.0.0",
    "pytz==2021.3",
    "requests==2.26.0",
    "scikit_learn==1.2.2",
    "setuptools==61.2.0 ",
    "timezonefinder==6.0.1",
    "tqdm==4.64.0",
    "strenum==0.4.15",
    "perlin-noise==1.12",
    "cffi==1.15.1",
    "numba==0.57.1",
    "pygad==3.0.1",
    "perlin-noise==1.12",
    "haversine==2.8.1"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://ubcsolar.com"
Repository = "https://github.com/UBC-Solar/Simulation"
Documentation = "https://wiki.ubcsolar.com"

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools]
packages = ["simulation"]

[project.scripts]
run_simulation = "simulation.cmd.run_simulation:main"
simulation_health_check = "simulation.cmd.run_simulation:_health_check"
build_simulation = "simulation.cmd.run_simulation:_execute_build_script"

[[tool.setuptools-rust.ext-modules]]
# Private Rust extension module to be nested into the Python package
target = "core"

path = "Cargo.toml"      # Default value, can be omitted
binding = "PyO3"         # Default value, can be omitted
py-limited-api = "auto"  # Default value, can be omitted

[tool.maturin]
features = ["pyo3/extension-module"]
