[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ubc-solar-simulation"
version = "1.1.0"
authors = [
    "UBC Solar Strategy Team <strategy@ubcsolar.com>",
    "Joshua Riefman <joshuariefman@gmail.com>"
]
maintainers = [
    "UBC Solar Strategy Team <strategy@ubcsolar.com>",
    "Joshua Riefman <joshuariefman@gmail.com>"
]
description = "UBC Solar's Simulation Environment"
readme = "README.md"
keywords = ["car", "simulation", "solar"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Physics"
]
homepage = "https://ubcsolar.com"
repository = "https://github.com/UBC-Solar/Simulation"
documentation = "https://ubc-solar-simulation.readthedocs.io/en/latest/"
packages = [
    {include = "simulation"}
]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"

[tool.setuptools]
packages = ["simulation"]

[tool.poetry.dependencies]
python = "^3.10"
bayesian_optimization = "^1.4.3"
matplotlib = "^3.7.2"
Pillow = "^9.4.0"
plotly = "^5.6.0"
polyline = "^1.4.0"
pytest = "^7.1.1"
python-dotenv = "^1.0.0"
pytz = "*"
requests = "^2.26.0"
scikit_learn = "^1.2.2"
setuptools = "^76.0.0"
timezonefinder = "^6.0.1"
tqdm = "^4.64.0"
strenum = "^0.4.15"
cffi = "^1.15.1"
pygad = "^3.0.1"
haversine = "^2.8.1"
gitpython = "^3.1.42"
google-api-core = "^2.17.1"
google-api-python-client = "^2.120.0"
google-auth = "^2.28.1"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
googleapis-common-protos = "^1.62.0"
dill = ">=0.3.8"
solcast = "^1.2.3"
tzlocal = "^5.2"
mplcursors = "^0.5.3"
pandas = "^2.2.2"
bokeh = "^3.5.1"
ubc-solar-physics = "^1.4.2"
pydantic = "2.*"
ubc-solar-data-tools = "^1.5.0"
anytree = "^2.12.1"
folium = "^0.19.5"
pyqt5-stubs = "^5.15.6.0"
pyqtwebengine = "^5.15.7"
